[package]
name = "saucepan"
version = "1.0.0"
readme = "README.md"
license = "Apache-2.0"
authors = [
    "Robert Jacobson <rljacobson@gmail.com>",        # mash-up
    "Brendan Zabarauskas <bjzaba@yahoo.com.au>",     # codespan author
    "Florent FAYOLLE <florent.fayolle69@gmail.com>", # nom_locate author
    "Christopher Durham <cad97@cad97.com>",          # nom_locate author
    "Valentin Lorentz <progval+git@progval.net>"     # nom_locate author
]
description = "Data structures for tracking  source spans, locations in source code"
homepage = "https://github.com/rljacobson/codespan"
repository = "https://github.com/rljacobson/codespan"
documentation = "https://github.com/rljacobson/codespan"
edition = "2018"

[dependencies]
codespan-reporting = {version = "0.9.5", optional = true }
serde = { version = "1", optional = true, features = ["derive"]}
nom = {version = "6.0.0-alpha1", optional = true}
bytecount = "^0.6"
memchr = ">=1.0.1, <3.0.0" # ^1.0.0 + ^2.0

[features]
default = ["reporting", "nom"]
reporting = ["codespan-reporting"]
generic-simd = ["bytecount/generic-simd"]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
nom = ["nom"]
serialization = ["serde", "codespan-reporting/serialization"]
generic-simd = ["bytecount/generic-simd"]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
