[package]
name    = "saucepan"
version = "1.1.0"
readme  = "README.md"
license = "Apache-2.0"
authors = [
    "Robert Jacobson <rljacobson@gmail.com>"       , # saucepan author
    "Brendan Zabarauskas <bjzaba@yahoo.com.au>"    , # codespan author
    "Florent FAYOLLE <florent.fayolle69@gmail.com>", # nom_locate author
    "Christopher Durham <cad97@cad97.com>"         , # nom_locate author
    "Valentin Lorentz <progval+git@progval.net>"     # nom_locate author
]
description   = "Data structures for tracking  source spans, locations in source code"
homepage      = "https://github.com/rljacobson/saucepan"
repository    = "https://github.com/rljacobson/saucepan"
documentation = "https://github.com/rljacobson/saucepan"
edition       = "2021"

[dependencies]
codespan-reporting = { version = "0.11",  optional = true }
serde              = { version = "1",     optional = true, features = ["derive"] }
nom                = { version = "7",     optional = true }
nom_locate         = { version = "4",     optional = true }
bytecount          = "0.6.2"
memchr             = ">=1.0.1, <3.0.0"

[features]
default               = ["reporting", "nom-parsing", "runtime-dispatch-simd"]
reporting             = ["codespan-reporting"]
generic-simd          = ["bytecount/generic-simd"]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
nom-parsing           = ["nom", "nom_locate"]
serialization         = ["serde", "codespan-reporting/serialization"]
